src/test/ui/issues/issue-28971.stderr
error[E0599]: no variant or associated item named `Baz` found for type `Foo` in the current scope
  --> $DIR/issue-28971.rs:7:18
   |
LL | enum Foo {
   | -------- variant or associated item `Baz` not found here
...
LL |             Foo::Baz(..) => (),
   |                  ^^^
   |                  |
   |                  variant or associated item not found in `Foo`
   |                  help: there is a variant with a similar name: `Bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
